--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "commonjs",
         "lib": ["es2018", "dom"],
         "declaration": true,
+        "declarationMap": true,
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
