--- a/package.json
+++ b/package.json
@@ -1,48 +1,63 @@
 {
-    "name": "@johan27000/google-reviews-fetcher",
-    "version": "1.0.5",
-    "publishConfig": {
-        "access": "public"
-    },
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist"
-    ],
-    "jsx": "react",
-    "scripts": {
-        "build": "tsc && cp -r src/components/styles dist/",
-        "test": "jest",
-        "prepare": "npm run build"
-    },
-    "dependencies": {
-        "node-fetch": "^3.3.2",
-        "swiper": "^11.0.0",
-        "react-masonry-css": "^1.0.16"
-    },
-    "devDependencies": {
-        "@types/jest": "^29.5.14",
-        "@types/node": "^22.9.0",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
-        "typescript": "^5.6.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    },
-    "peerDependencies": {
-        "react": ">=16.8.0",
-        "react-dom": ">=16.8.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/johan-lemarchand/google-reviews-fetcher.git"
-    },
-    "author": "johan27000",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/johan-lemarchand/google-reviews-fetcher/issues"
-    },
-    "homepage": "https://github.com/johan-lemarchand/google-reviews-fetcher#readme",
-    "keywords": [],
-    "description": ""
+  "name": "@johan27000/next-google-reviews",
+  "version": "1.1.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc && cp -r src/styles dist/",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
+  "dependencies": {
+    "react-icons": "^5.3.0",
+    "react-masonry-css": "^1.0.16"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "next": "^15.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.6.3"
+  },
+  "peerDependencies": {
+    "next": ">=14.0.0",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
+    "swiper": ">=11.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johan-lemarchand/next-google-reviews.git"
+  },
+  "author": "johan27000",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/johan-lemarchand/next-google-reviews/issues"
+  },
+  "homepage": "https://github.com/johan-lemarchand/next-google-reviews#readme",
+  "keywords": [
+    "next.js",
+    "google-reviews",
+    "react",
+    "typescript"
+  ],
+  "description": "A Next.js component library for fetching and displaying Google Reviews"
 }
