--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johan27000/next-google-reviews",
-  "version": "1.1.0",
+  "version": "1.1.10",
   "publishConfig": {
     "access": "public"
   },
@@ -13,6 +13,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
+    },
+    "./server": {
+      "types": "./dist/server.d.ts",
+      "import": "./dist/server.js",
+      "require": "./dist/server.js"
     }
   },
   "files": [
@@ -39,8 +44,8 @@
   },
   "peerDependencies": {
     "next": ">=14.0.0",
-    "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
+    "react": "^18.2.0 || 19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^18.2.0 || 19.0.0-rc-02c0e824-20241028",
     "swiper": ">=11.0.0"
   },
   "repository": {
